[Add]退会機能やり直し

--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -20,3 +20,8 @@
       <div><%= link_to "退会しない", public_path, class: "btn btn-sm btn-primary" %></div>
       </div>
       </div>
+
+     <div class="col">
+        <div class="text-center"
+      <div><%= link_to "退会する", public_path, method: :delete, class: "btn btn-sm btn-primary" %></div>
+      </div>
