--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -23,5 +23,5 @@
 
      <div class="col">
         <div class="text-center"
-      <div><%= link_to "退会する", public_path, method: :delete, class: "btn btn-sm btn-primary" %></div>
+      <div><%= link_to "退会する", public_withdraw_user_path(@customer), method: :delete, class: "btn btn-sm btn-primary" %></div>
       </div>
