--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -1,2 +1,77 @@
-<h1>Public::Addresses#index</h1>
-<p>Find me in app/views/public/addresses/index.html.erb</p>
+<p id="notice"></p>
+  <div class="container">
+    <div class="row">
+      <div class="p-3 mb-2 bg-secondary text-light">配送先登録/一覧</div>
+　　</div>
+　</div>
+
+　<%= form_with model: @customer, url: public_addresses_path do |f| %>
+
+　<div class="container">
+    <div class="row mt-3">
+      <div class="col-3">
+        郵便番号(ハイフンなし)
+      </div>
+      <div class="col-2">
+      <%= f.text_field :postal_code, placeholder: "000000" %>
+      </div>
+
+
+  <div class="container">
+    <div class="row mt-3">
+      <div class="col-3">
+        住所
+      </div>
+      <div class="col-2">
+      <%= f.text_field :adress, placeholder: "東京都千代田区" %>
+      </div>
+
+
+  <div class="container">
+    <div class="row mt-3">
+      <div class="col-3">
+        宛名
+      </div>
+      <div class="col-2">
+      <%= f.text_field :name, placeholder: "山田花子" %>
+
+
+<%= f.submit "新規登録", class: "btn btn-success" %>
+
+</div>
+</div>
+
+
+  <% end %>
+
+
+  <div class="container">
+    <div class="row mt-4 text-left">
+
+
+
+ <table class="table">
+    <thead>
+      <tr>
+    <th>郵便番号</th>
+    <th>住所</th>
+    <th>宛名</th>
+     <th colspan="3"></th>
+  </tr>
+</table>
+
+
+
+    <tbody>
+      <% @customers.each do |customer| %>
+      <tr>
+      <td><%= customer.postal_code %></td>
+      <td><%= customer.address %></td>
+      <td><%= customer.last_name %>
+      <%= customer.first_name %></td>
+
+
+
+
+
+  <% end %>
