--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -5,7 +5,7 @@
 　　</div>
 　</div>
 
-　<%= form_with model: @customer, url: public_addresses_path do |f| %>
+　<%= form_with model: @address, url: public_addresses_path do |f| %>
 
 　<div class="container">
     <div class="row mt-3">
@@ -23,7 +23,7 @@
         住所
       </div>
       <div class="col-2">
-      <%= f.text_field :adress, placeholder: "東京都千代田区" %>
+      <%= f.text_field :address, placeholder: "東京都千代田区" %>
       </div>
 
 
@@ -32,14 +32,15 @@
       <div class="col-3">
         宛名
       </div>
-      <div class="col-2">
-      <%= f.text_field :name, placeholder: "山田花子" %>
+      <div class="col-3">
+      <%= f.text_field :last_name, placeholder: "山田花子" %>
+      <%= f.text_field :first_name, placeholder: "山田花子" %>
+      </div>
+      <div class="col-3">
+      <%= f.submit "新規登録", class: "btn btn-success" %>
+    </div>
+  </div>
 
-
-<%= f.submit "新規登録", class: "btn btn-success" %>
-
-</div>
-</div>
 
 
   <% end %>
@@ -50,7 +51,7 @@
 
 
 
- <table class="table">
+ <table border="1" style="border-collapse: collapse">
     <thead>
       <tr>
     <th>郵便番号</th>
@@ -58,17 +59,21 @@
     <th>宛名</th>
      <th colspan="3"></th>
   </tr>
-</table>
+</thead>
 
 
 
     <tbody>
-      <% @customers.each do |customer| %>
+      <% @addresses.each do |address| %>
       <tr>
-      <td><%= customer.postal_code %></td>
-      <td><%= customer.address %></td>
-      <td><%= customer.last_name %>
-      <%= customer.first_name %></td>
+        <td><%= address.postal_code %></td>
+          <td><%= address.address %></td>
+            <td><%= address.last_name %>
+              <%= address.first_name %></td>
+                <td><%= link_to "編集する", edit_public_address_path(address.id), class: "btn btn-sm btn-success" %></td>
+                  <td><%= link_to "削除する", public_addresses_path(@address), class: "btn btn-sm btn-danger" %></td>
+      </tr>
+    </tbody>
 
 
 
