--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -22,5 +22,12 @@
 
         <h3>新着商品</h3>
       </div>
+</div>
+
+<div class="container">
+    <div class="row mt-3 justify-content-center">
+
+
+
 
 
