--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -1,2 +1,49 @@
-<h1>Public::Addresses#edit</h1>
-<p>Find me in app/views/public/addresses/edit.html.erb</p>
+<p id="notice"></p>
+  <div class="container">
+    <div class="row">
+      <div class="p-3 mb-2 bg-secondary text-light">配送先編集</div>
+　　</div>
+　</div>
+
+
+
+<%= form_with model: @address, url: public_addresses_path do |f| %>
+
+　<div class="container">
+    <div class="row mt-3">
+      <div class="col-3">
+        郵便番号(ハイフンなし)
+      </div>
+      <div class="col-2">
+      <%= f.text_field :postal_code, placeholder: "000000" %>
+      </div>
+
+
+  <div class="container">
+    <div class="row mt-3">
+      <div class="col-3">
+        住所
+      </div>
+      <div class="col-2">
+      <%= f.text_field :address, placeholder: "東京都千代田区" %>
+      </div>
+
+
+  <div class="container">
+    <div class="row mt-3">
+      <div class="col-3">
+        宛名
+      </div>
+      <div class="col-3">
+      <%= f.text_field :last_name, placeholder: "山田花子" %>
+      <%= f.text_field :first_name, placeholder: "山田花子" %>
+      </div>
+      <div class="col-3">
+      <%= f.submit "変更内容を保存", class: "btn btn-success" %>
+    </div>
+  </div>
+
+
+
+  <% end %>
+
