[Add]フォーム編集

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -151,12 +151,6 @@
 
 
 
-
-
-
-
-
-
     </form>
           </div>
             </ul>
@@ -167,10 +161,19 @@
   <main>
     <%= yield %>
   </main>
+
+
+
+    <footer class="mt-auto bg-info py-2 text-center">
+        <div class="container">
+            <small class="text-muted">nagano_cake
+            </small>
+        </div>
+    </footer>
+
+
+
   </body>
-
-
-
 
 </html>
 
