--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -88,6 +88,12 @@
 　　</div>
 　</div>
 
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 pb-5 mx-auto">
+        <div class="text-center"
+          <div><%= link_to "こちら",  new_customer_session_path %>からログインを行ってください。</div>
+      </div>
+    </div>
+  </div>
 
-<div><%= render "public/shared/links" %>からログインしてください。</div>
-</div>
