--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,4 +1,4 @@
-<main>
+
   <p id="notice"></p>
   <div class="container">
     <div class="row">
@@ -16,6 +16,7 @@
         <th colspan="3"></th>
       </tr>
     </thead>
+    </table>
 
 
 <% @orders.each do |order| %>
@@ -33,3 +34,4 @@
   </tr>
 
 <% end %>
+
