--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -25,7 +25,7 @@
 
 
 <div class="container">
-    <div class="row mt-3 justify-content-center">
+    <div class="row mt-3 mb-5 justify-content-center">
 
 <%= image_tag "birthday-2901945__480.jpg", size: '450x300' %>
   </div>
