--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -7,7 +7,7 @@
 
 
 
-<%= form_with model: @address, url: public_addresses_path do |f| %>
+<%= form_with model: @address, url: public_address_path do |f| %>
 
 　<div class="container">
     <div class="row mt-3">
@@ -35,8 +35,8 @@
         宛名
       </div>
       <div class="col-3">
-      <%= f.text_field :last_name, placeholder: "山田花子" %>
-      <%= f.text_field :first_name, placeholder: "山田花子" %>
+      <%= f.text_field :name, placeholder: "山田花子" %>
+
       </div>
       <div class="col-3">
       <%= f.submit "変更内容を保存", class: "btn btn-success" %>
