--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -60,22 +60,26 @@
         <th colspan="3"></th>
       </tr>
     </thead>
-    </table>
-  </div>
-</div>
+
 
 
 
     <tbody>
       <% @addresses.each do |address| %>
       <tr>
+
         <td><%= address.postal_code %></td>
           <td><%= address.address %></td>
             <td><%= address.name %></td>
                 <td><%= link_to "編集する", edit_public_address_path(address.id), class: "btn btn-sm btn-success" %></td>
-                  <td><%= link_to "削除する", public_addresses_path(@address), class: "btn btn-sm btn-danger" %></td>
+                  <td><%= link_to "削除する", public_destroy_address_path(address.id), method: :delete, class: "btn btn-sm btn-danger", method: :delete, "data-confirm" => "本当に削除しますか？" %></td>
+
       </tr>
       <% end %>
     </tbody>
 
+
+</table>
+  </div>
+</div>
 
