--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -7,7 +7,7 @@
 　</div>
 
 
-　<%= form_with model: @item, url: admin_items_path do |f| %>
+　<%= form_with model: @item, url: admin_item_path do |f| %>
 
 
   <%= image_tag @item.image %>
