--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,6 +1,28 @@
 
+<div class="container">
+    <h3>商品一覧</h3>
+
+    <div class="row">
+      <% @items.each do |item| %>
+            <div class="col">
+                <%= link_to image_tag item.image %>
+
+            <div class="col">
+                <strong>商品名</strong>
+                <%= item.name %>
+
+            <div class="col">
+                <strong>商品名</strong>
+                <%= item.price %>
+
+            </div>
+            </div>
+            </div>
 
 
-<h3>商品一覧</h3>
+
+    <% end %>
+    </div>
+</div>
 
 
