--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -5,7 +5,7 @@
     <div class="row">
       <% @items.each do |item| %>
             <div class="col">
-                <%= link_to image_tag item.image %>
+                <%= link_to image_tag item.image, size: '200x200' %>
 
             <div class="col">
                 <strong>商品名</strong>
