--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -5,14 +5,14 @@
     <div class="row">
       <% @items.each do |item| %>
             <div class="col">
-                <%= link_to image_tag item.image, size: '200x200' %>
+                <%= link_to (image_tag item.image, size: '200x200'), public_item_path(item.id) %>
 
             <div class="col">
                 <strong>商品名</strong>
                 <%= item.name %>
 
             <div class="col">
-                <strong>商品名</strong>
+                <strong>価格</strong>
                 <%= item.price %>
 
             </div>
