--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,1 +1,38 @@
-商品詳細
+
+<%= form_with model: @item, url: public_cart_items_path do |f| %>
+
+<div class="container justify-content-center ">
+    <div class="row">
+      <div class="col-4">
+<%= image_tag @item.image, size: '200x200' %>
+      </div>
+
+    <div class="col-3">
+      <div class="mt-5 mb-5">
+
+        <div><%= @item.name %></div>
+        </div>
+
+        <div class="mb-5">
+
+        <div><%= @item.introduction %></div>
+        </div>
+
+
+        <div class="mb-5">
+        <div><%= @item.price %></div>
+        </div>
+
+
+
+
+
+
+<div><%= f.submit "カートに入れる", class: "btn btn-success" %></div>
+
+</div>
+    </div>
+  </div>
+
+
+<% end %>
