--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -4,6 +4,8 @@
 
     <div class="row">
       <% @items.each do |item| %>
+
+      <% if item.is_active %>
             <div class="col">
                 <%= link_to (image_tag item.image, size: '200x200'), public_item_path(item.id) %>
 
@@ -18,7 +20,7 @@
             </div>
             </div>
             </div>
-
+        <% end %>
 
 
     <% end %>
