--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -25,6 +25,8 @@
 
 
 
+  <%= f.select :item_id, [['1個', 1], ['2個', 2], ['3個', 3], ['4個', 4]], { include_blank: true, selected: 1 }, { id: "item_id", class: "item_class" } %>
+
 
 
 
