[Add]顧客のhomeとitem編集

--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -48,4 +48,4 @@
 </div>
 
 
-<div class="all-items-show-button"><%= link_to "全ての商品をみる", public_items_path %></div>
+<div class="all-items-show-button, text-right"><%= link_to "全ての商品をみる>", public_items_path %></div>
