--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -4,7 +4,8 @@
       <div class="p-3 mb-2 bg-secondary text-light">ショッピングカート</div>
 　　</div>
 
-　<table class="table">
+
+　<table border="1" style="border-collapse: collapse">
     <thead>
       <tr>
         <th>商品名</th>
@@ -20,17 +21,17 @@
 
 
     <tbody>
-    <% @items.each do |item| %>
     <tr>
-      <td><%= item.name %></td>
-
       <% @cart_items.each do |cart_item| %>
+      <td><%= cart_item.item.name %></td>
       <td><%= cart_item.item.with_tax_price %></td>
-      <td><%= cart_item.amount %></td>
+      <td><%= cart_item.amount %>
+      <%= link_to "変更", public_cart_item_path(cart_item.id), class: "btn btn-outline-success btn-sm" %></td>
       <td><%= cart_item.subtotal %></td>
+      <td><%= link_to "削除", public_destroy_cart_item_path(cart_item.id), method: :delete, class: "btn btn-outline-danger btn-sm" %></td>
 
     </tr>
-    <% end %>
+
     <% end %>
   </tbody>
 
