--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -29,10 +29,18 @@
       <%= link_to "変更", public_cart_item_path(cart_item.id), class: "btn btn-outline-success btn-sm" %></td>
       <td><%= cart_item.subtotal %></td>
       <td><%= link_to "削除", public_destroy_cart_item_path(cart_item.id), method: :delete, class: "btn btn-outline-danger btn-sm" %></td>
-
+      <% @total = @total+ cart_item.subtotal %>
+      <% @total += cart_item.subtotal %>
     </tr>
 
     <% end %>
   </tbody>
 
   </table>
+
+
+<div class="text-left">
+  <td><%= link_to "買い物を続ける", public_path, class: "btn btn-primary btn-sm" %></td>
+</div>
+
+<td><%= link_to "情報入力に進む", new_public_order_path, class: "btn btn-warning btn-sm" %></td>
