--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -18,18 +18,18 @@
     </thead>
 
 
-
+  <div><%= link_to "カートを空にする", destroy_all_public_cart_items_path(@cart_item), method: :delete, class: "btn btn-danger btn-sm" %></div>
 
     <tbody>
     <tr>
       <% @cart_items.each do |cart_item| %>
-      <td><%= cart_item.item.name %></td>
-      <td><%= cart_item.item.with_tax_price %></td>
-      <td><%= cart_item.amount %>
-      <%= link_to "変更", public_cart_item_path(cart_item.id), class: "btn btn-outline-success btn-sm" %></td>
-      <td><%= cart_item.subtotal %></td>
-      <td><%= link_to "削除", public_destroy_cart_item_path(cart_item.id), method: :delete, class: "btn btn-outline-danger btn-sm" %></td>
-      <% @total = @total+ cart_item.subtotal %>
+        <td><%= cart_item.item.name %></td>
+        <td><%= cart_item.item.with_tax_price %></td>
+        <td><%= cart_item.amount %>
+        <%= link_to "変更", public_cart_item_path(cart_item.id), class: "btn btn-outline-success btn-sm" %></td>
+        <td><%= cart_item.subtotal %></td>
+        <td><%= link_to "削除", public_destroy_cart_item_path(cart_item.id), method: :delete, class: "btn btn-outline-danger btn-sm" %></td>
+
       <% @total += cart_item.subtotal %>
     </tr>
 
