--- a/app/views/public/orders/complete.html.erb
+++ b/app/views/public/orders/complete.html.erb
@@ -1,2 +1,5 @@
-<h1>Public::Orders#complete</h1>
-<p>Find me in app/views/public/orders/complete.html.erb</p>
+
+<div style="text-align: center">
+  ご注文ありがとうございました！
+</div>
+
