--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -15,52 +15,79 @@
   </div>
   <div class="container">
       <div class="row mb-2">
-  <div><%= f.radio_button :payment_method, :credit_card, checked: "checked" %></div>
-  <div><%= f.label :クレジットカード, class: "payment_method_label" %><br /></div>
-  </div>
-  </div>
+  <%= f.radio_button :payment_method, "credit_card" %>
+<%= f.label :payment_method, "クレジットカード" %>
+
 
 <div class="container">
       <div class="row mb-2">
-  <div><%= f.radio_button :payment_method, :bank_transfer, checked: "checked" %></div>
-  <div><%= f.label :銀行振込, class: "payment_method_label" %><br /></div>
-</div>
-</div>
+ <%= f.radio_button :payment_method, "bank_transfer" %>
+<%= f.label :payment_method, "銀行振込" %>
+
+<% end %>
+
+
+<%= form_with model: @customer, url: edit_public_customer_path do |f| %>
+<%= form_with model: @address, url: public_addresses_path do |f| %>
 
 
   <div class="container">
-      <div class="row mb-2">
+    <div class="row mb-2">
       <div class="col-2">
         <h5>お届け先</h5>
       </div>
+
+
 
   <div class="container">
       <div class="row mb-2">
   <div><%= f.radio_button :payment_method, :credit_card, checked: "checked" %></div>
   <div><%= f.label :ご自身の住所, class: "payment_method_label" %><br /></div>
- >
 
-<div class="container">
-      <div class="row mb-2">
-  <div><%= f.radio_button :payment_method, :credit_card, checked: "checked" %></div>
-  <div><%= f.label :登録済住所から選択, class: "payment_method_label" %><br /></div>
+
 
 
   <div class="container">
       <div class="row mb-2">
-  <div><%= f.radio_button :payment_method, :credit_card, checked: "checked" %></div>
-<div><%= f.label :新しいお届け先, class: "payment_method_label" %><br /></div>
+        〒<%= @customer.postal_code %>
+          <%= @customer.address %><br />
+          <%= @customer.full_name %>
+      </div>
+  </div>
+
+
+
+
+
+
+
+
+<div class="container">
+      <div class="row mb-2">
+  <div><%= f.radio_button :payment_method, :credit_card %>登録済住所から選択</div>
+  <div class="container">
+  <div class="row mb-2">
+<%= f.select :address_id, options_from_collection_for_select(Address.all, :id, :address_display) %>
+</div>
+</div>
+
+
+
+  <div class="container">
+      <div class="row mb-2">
+  <div><%= f.radio_button :payment_method, :credit_card %>新しいお届け先</div>
+
  <div class="container">
       <div class="row mb-2">
-  <%= f.label :郵便番号 %>
-      <%= f.text_field :postal_code %>
+      <%= f.label :郵便番号 %>
+      <%= f.text_field :postal_code, placeholder: "000000" %>
       </div>
       </div>
 
       <div class="container">
       <div class="row mb-2">
         <%= f.label :住所 %>
-      <%= f.text_field :address %>
+      <%= f.text_field :address, placeholder: "東京都千代田区" %>
       </div>
       </div>
 
@@ -82,4 +109,7 @@
 </div>
 </div>
 
-  <% end %>
+
+<% end %>
+<% end %>
+
