--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -13,22 +13,29 @@
       <div class="col-2">
        <h5>支払方法</h5>
   </div>
+  </div>
+  </div>
+
   <div class="container">
       <div class="row mb-2">
-  <%= f.radio_button :payment_method, "credit_card" %>
+  <%= f.radio_button :payment_method, "credit_card", checked: "checked" %>
 <%= f.label :payment_method, "クレジットカード" %>
+</div>
+</div>
 
 
 <div class="container">
       <div class="row mb-2">
- <%= f.radio_button :payment_method, "bank_transfer" %>
+<%= f.radio_button :payment_method, "bank_transfer" %>
 <%= f.label :payment_method, "銀行振込" %>
+</div>
+</div>
 
 <% end %>
 
 
-<%= form_with model: @customer, url: edit_public_customer_path do |f| %>
-<%= form_with model: @address, url: public_addresses_path do |f| %>
+<%= form_with model: @customer, url: public_public_confirm_path do |f| %>
+<%= form_with model: @address, url: public_public_confirm_path do |f| %>
 
 
   <div class="container">
@@ -36,13 +43,16 @@
       <div class="col-2">
         <h5>お届け先</h5>
       </div>
-
+</div>
+</div>
 
 
   <div class="container">
       <div class="row mb-2">
-  <div><%= f.radio_button :payment_method, :credit_card, checked: "checked" %></div>
-  <div><%= f.label :ご自身の住所, class: "payment_method_label" %><br /></div>
+  <div><%= f.radio_button :address, :credit_card, checked: "checked" %></div>
+  <%= f.label :address, "ご自身の住所" %><br /></div>
+  </div>
+
 
 
 
@@ -59,12 +69,12 @@
 
 
 
-
-
-
-<div class="container">
+ <div class="container">
       <div class="row mb-2">
-  <div><%= f.radio_button :payment_method, :credit_card %>登録済住所から選択</div>
+  <div><%= f.radio_button :address, :credit_card %></div>
+  <%= f.label :address, "登録済住所から選択" %><br /></div>
+  </div>
+
   <div class="container">
   <div class="row mb-2">
 <%= f.select :address_id, options_from_collection_for_select(Address.all, :id, :address_display) %>
@@ -75,36 +85,54 @@
 
   <div class="container">
       <div class="row mb-2">
-  <div><%= f.radio_button :payment_method, :credit_card %>新しいお届け先</div>
+  <div><%= f.radio_button :address, :credit_card %></div>
+  <%= f.label :address, "新しいお届け先" %><br /></div>
+  </div>
+
 
  <div class="container">
       <div class="row mb-2">
-      <%= f.label :郵便番号 %>
+        <div class="col-2">
+      <%= f.label :郵便番号ハイフンなし %>
+      </div>
+        <div class="col-2">
       <%= f.text_field :postal_code, placeholder: "000000" %>
       </div>
+
       </div>
+    </div>
+
 
       <div class="container">
       <div class="row mb-2">
+        <div class="col-2">
         <%= f.label :住所 %>
+        </div>
+        <div class="col-2">
       <%= f.text_field :address, placeholder: "東京都千代田区" %>
       </div>
       </div>
+      </div>
 
       <div class="container">
       <div class="row mb-2">
+        <div class="col-2">
         <%= f.label :宛名 %>
+        </div>
+        <div class="col-2">
       <%= f.text_field :name %>
+      </div>
+      </div>
       </div>
 
 
 
  <div class="container">
-      <div class="row mt-2 justify-content-center">
-      <div class="col">
+    <div class="row mb-3">
+      <div class="col text-center">
 
 
-<div><%= f.submit "確認画面へ進む", class: "btn btn-success" %></div>
+<div><%= f.submit "確認画面へ進む", class: "btn btn-primary" %></div>
 </div>
 </div>
 </div>
