--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -17,17 +17,17 @@
   </div>
 
   <div class="container">
-      <div class="row mb-2">
-  <%= f.radio_button :payment_method, "credit_card", checked: "checked" %>
-<%= f.label :payment_method, "クレジットカード" %>
+    <div class="row mb-2">
+ <%= f.radio_button :payment_method, Order.payment_methods.key(0) %>
+<%= f.label :payment_method, Order.payment_methods_i18n[:credit_card] %>
 </div>
 </div>
 
 
 <div class="container">
       <div class="row mb-2">
-<%= f.radio_button :payment_method, "bank_transfer" %>
-<%= f.label :payment_method, "銀行振込" %>
+<%= f.radio_button :payment_method, Order.payment_methods.key(1) %>
+<%= f.label :payment_method, Order.payment_methods_i18n[:bank_transfer]%>
 </div>
 </div>
 
@@ -92,8 +92,8 @@
 
  <div class="container">
       <div class="row mb-2">
-        <div class="col-2">
-      <%= f.label :郵便番号ハイフンなし %>
+        <div class="col-3">
+      <%= f.label :郵便番号 %>(ハイフンなし)
       </div>
         <div class="col-2">
       <%= f.text_field :postal_code, placeholder: "000000" %>
@@ -105,7 +105,7 @@
 
       <div class="container">
       <div class="row mb-2">
-        <div class="col-2">
+        <div class="col-3">
         <%= f.label :住所 %>
         </div>
         <div class="col-2">
@@ -116,7 +116,7 @@
 
       <div class="container">
       <div class="row mb-2">
-        <div class="col-2">
+        <div class="col-3">
         <%= f.label :宛名 %>
         </div>
         <div class="col-2">
