--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -25,12 +25,12 @@
       <% @cart_items.each do |cart_item| %>
         <td><%= cart_item.item.name %></td>
         <td><%= cart_item.item.with_tax_price %>円</td>
-
-        <%= form_with model: @cart_item, url: public_cart_items_path do |f| %>
-        <td><%= f.select :amount, *[1..10] %>
-        <%= f.submit "変更", class: "btn btn-success" %></td>
-
+        <td>
+        <%= form_with model: cart_item, url: public_cart_item_path(cart_item.id), method: :patch do |f| %>
+        <%= f.select :amount, *[1..10] %>
+        <%= f.submit "変更", class: "btn btn-success" %>
         <% end %>
+        </td>
 
 
         <td><%= cart_item.subtotal %>円</td>
