[Add]注文情報確認フォーム

--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -27,7 +27,11 @@
         <td>
         <%= form_with model: cart_item, url: public_cart_item_path(cart_item.id), method: :patch do |f| %>
         <%= f.select :amount, *[1..10] %>
-
-        <% end %>
         </td>
+        <% end %>
+
       <% end %>
+    </tr>
+    </tbody>
+
+  </table>
