--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -9,26 +9,26 @@
   <%= form_with model: @order, url: public_orders_confirm_path do |f| %>
 
   <div class="container">
-      <div class="row mb-2">
+    <div class="row mb-2">
       <div class="col-2">
        <h5>支払方法</h5>
-  </div>
-  </div>
+      </div>
+    </div>
   </div>
 
   <div class="container">
     <div class="row mb-2">
- <%= f.radio_button :payment_method, Order.payment_methods.key(0) %>
-<%= f.label :payment_method, Order.payment_methods_i18n[:credit_card] %>
-</div>
-</div>
+      <%= f.radio_button :payment_method, Order.payment_methods.key(0) %>
+      <%= f.label :payment_method, Order.payment_methods_i18n[:credit_card] %>
+    </div>
+  </div>
 
 
 <div class="container">
-      <div class="row mb-2">
-<%= f.radio_button :payment_method, Order.payment_methods.key(1) %>
-<%= f.label :payment_method, Order.payment_methods_i18n[:bank_transfer]%>
-</div>
+  <div class="row mb-2">
+    <%= f.radio_button :payment_method, Order.payment_methods.key(1) %>
+    <%= f.label :payment_method, Order.payment_methods_i18n[:bank_transfer]%>
+  </div>
 </div>
 
 
@@ -39,89 +39,76 @@
       <div class="col-2">
         <h5>お届け先</h5>
       </div>
-</div>
-</div>
-
-
-  <div class="container">
-      <div class="row mb-2">
-  <div><%= f.radio_button :select_address, :address %></div>
-  <%= f.label :select_address, "ご自身の住所" %><br /></div>
-  </div>
-
-
-
-
-
-  <div class="container">
-      <div class="row mb-2">
-        〒<%= @customer.postal_code %>
-          <%= @customer.address %><br />
-          <%= @customer.full_name %>
-      </div>
-  </div>
-
-
-
-
-
- <div class="container">
-      <div class="row mb-2">
-  <div><%= f.radio_button :select_address, :address %></div>
-  <%= f.label :select_address, "登録済住所から選択" %><br /></div>
-  </div>
-
-  <div class="container">
-  <div class="row mb-2">
-<%= f.select :address_id, options_from_collection_for_select(Address.all, :id, :address_display) %>
-</div>
-</div>
-
-
-
-  <div class="container">
-      <div class="row mb-2">
-  <div><%= f.radio_button :select_address, :address %></div>
-  <%= f.label :select_address, "新しいお届け先" %><br /></div>
-  </div>
-
-
- <div class="container">
-      <div class="row mb-2">
-        <div class="col-3">
-      <%= f.label :郵便番号 %>(ハイフンなし)
-      </div>
-        <div class="col-2">
-      <%= f.text_field :postal_code, placeholder: "000000" %>
-      </div>
-
-      </div>
     </div>
+  </div>
+
+
+  <div class="container">
+    <div class="row mb-2">
+      <div><%= f.radio_button :select_address, 0, checked: "checked"  %></div>
+        <%= f.label :select_address, "ご自身の住所" %><br /></div>
+      </div>
+        <div class="container">
+          <div class="row mb-2">
+            〒<%= @customer.postal_code %>
+              <%= @customer.address %><br />
+              <%= @customer.full_name %>
+          </div>
+        </div>
+
+
+
+ <div class="container">
+    <div class="row mb-2">
+      <div><%= f.radio_button :select_address, 1 %></div>
+      <%= f.label :select_address, "登録済住所から選択" %><br /></div>
+      </div>
+  <div class="container">
+    <div class="row mb-2">
+      <%= f.select :address_id, options_from_collection_for_select(Address.all, :id, :address_display) %>
+    </div>
+  </div>
+
+
+
+  <div class="container">
+    <div class="row mb-2">
+      <div><%= f.radio_button :select_address, 2 %></div>
+        <%= f.label :select_address, "新しいお届け先" %><br /></div>
+      </div>
+        <div class="container">
+          <div class="row mb-2">
+            <div class="col-3">
+              <%= f.label :郵便番号 %>(ハイフンなし)
+            </div>
+            <div class="col-2">
+              <%= f.text_field :postal_code, placeholder: "000000" %>
+            </div>
+          </div>
+        </div>
 
 
       <div class="container">
-      <div class="row mb-2">
-        <div class="col-3">
-        <%= f.label :住所 %>
+        <div class="row mb-2">
+          <div class="col-3">
+          <%= f.label :住所 %>
+          </div>
+          <div class="col-2">
+            <%= f.text_field :address, placeholder: "東京都千代田区" %>
+          </div>
         </div>
-        <div class="col-2">
-      <%= f.text_field :address, placeholder: "東京都千代田区" %>
       </div>
-      </div>
-      </div>
+
 
       <div class="container">
-      <div class="row mb-2">
-        <div class="col-3">
-        <%= f.label :宛名 %>
+        <div class="row mb-2">
+          <div class="col-3">
+            <%= f.label :宛名 %>
+          </div>
+          <div class="col-2">
+            <%= f.text_field :name %>
+          </div>
         </div>
-        <div class="col-2">
-      <%= f.text_field :name %>
-
-
-
-      </div>
-      </div>
       </div>
 
 
@@ -129,12 +116,10 @@
  <div class="container">
     <div class="row mb-3">
       <div class="col text-center">
-
-
-<div><%= f.submit "確認画面へ進む", class: "btn btn-primary" %></div>
-</div>
-</div>
-</div>
+        <div><%= f.submit "確認画面へ進む", class: "btn btn-primary" %></div>
+      </div>
+    </div>
+  </div>
 
 
 
