--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -7,34 +7,68 @@
 
 <div class="container">
     <div class="row">
-  <table border="1" style="border-collapse: collapse">
-    <thead>
-      <tr>
-        <th>商品名</th>
-        <th>単価(税込)</th>
-        <th>数量</th>
-        <th>小計</th>
-        <th></th>
+      <div class="col-6">
+      <table border="1" style="border-collapse: collapse">
+      <thead>
+        <tr>
+          <th>商品名</th>
+          <th>単価(税込)</th>
+          <th>数量</th>
+          <th>小計</th>
         <th colspan="3"></th>
+        </tr>
+      </thead>
+
+  <tbody>
+    <% @cart_items.each do |cart_item| %>
+      <tr>
+        <td><%= cart_item.item.name %></td>
+        <td><%= cart_item.item.with_tax_price %>円</td>
+        <td><%= cart_item.amount %></td>
+        <td><%= cart_item.subtotal %>円</td>
       </tr>
-    </thead>
-
-<tbody>
-    <tr>
-
-
-
+    <% end %>
   </tbody>
-
-  </table>
-
-  </div>
   </div>
 
 
+<div class="col-6">
+    <table border="1" style="border-collapse: collapse">
+       <tr>
+    <th bgcolor = "lightsteelblue">送料</th>
+      <td>
+
+      </td>
+      </tr>
+
+      <tr>
+      <th bgcolor = "lightsteelblue">商品合計</th>
+      <td>
+
+      </td>
+      </tr>
+
+<tr>
+      <th bgcolor = "lightsteelblue">請求金額</th>
+      <td>
+
+      </td>
+  </tr>
+  </div>
+
+
+</table>
+
+</div>
+</div>
+
+<%= form_with model: @order, url: public_orders_confirm_path do |f| %>
 <h4>支払方法</h4>
 
 
 
 
 <h4>お届け先</h4>
+
+<%= f.submit "注文を確定する", class: "btn btn-success" %>
+<% end %>
