--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -111,7 +111,7 @@
         </div>
       </div>
 
-
+<%= f.hidden_field :address_id, :value => @address %>
 
  <div class="container">
     <div class="row mb-3">
