--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -7,17 +7,17 @@
 
 <div class="container">
     <div class="row">
-      <div class="col-6">
+      <div class="col">
       <table border="1" style="border-collapse: collapse">
-      <thead>
-        <tr>
-          <th>商品名</th>
-          <th>単価(税込)</th>
-          <th>数量</th>
-          <th>小計</th>
-        <th colspan="3"></th>
-        </tr>
-      </thead>
+        <thead>
+          <tr>
+            <th>商品名</th>
+            <th>単価(税込)</th>
+            <th>数量</th>
+            <th>小計</th>
+          <th colspan="3"></th>
+          </tr>
+        </thead>
 
   <tbody>
     <% @cart_items.each do |cart_item| %>
@@ -32,43 +32,46 @@
   </div>
 
 
-<div class="col-6">
-    <table border="1" style="border-collapse: collapse">
-       <tr>
-    <th bgcolor = "lightsteelblue">送料</th>
-      <td>
-
-      </td>
-      </tr>
-
-      <tr>
-      <th bgcolor = "lightsteelblue">商品合計</th>
-      <td>
-
-      </td>
-      </tr>
-
-<tr>
-      <th bgcolor = "lightsteelblue">請求金額</th>
-      <td>
-
-      </td>
-  </tr>
-  </div>
-
-
-</table>
-
-</div>
-</div>
-
 <%= form_with model: @order, url: public_orders_confirm_path do |f| %>
-<h4>支払方法</h4>
+   <div class="col">
+    <table border="1" style="border-collapse: collapse">
+      <tr>
+        <th bgcolor = "lightsteelblue">送料</th>
+        <td><%= @order.shipping_cost %></td>
+      </tr>
+      <tr>
+        <th bgcolor = "lightsteelblue">商品合計</th>
+        <td></td>
+      </tr>
+      <tr>
+        <th bgcolor = "lightsteelblue">請求金額</th>
+      <td><%= @order.total_payment %></td>
+      </tr>
+    </div>
+    </table>
+    </div>
+</div>
 
 
+<div class="container">
+    <div class="row">
+      <h4>支払方法</h4>
+      <%= @order.payment_method_i18n %>
+    </div>
+  </div>
+<div class="container">
+    <div class="row">
+      <h4>お届け先</h4>
+      〒<%= @order.postal_code %>
+        <%= @order.address %><br />
+        <%= @order.name %>
+    </div>
+</div>
 
+<div class="container">
+    <div class="row">
+      <%= f.submit "注文を確定する", class: "btn btn-success" %>
+    </div>
+</div>
 
-<h4>お届け先</h4>
-
-<%= f.submit "注文を確定する", class: "btn btn-success" %>
 <% end %>
