[Add]注文履歴一覧作成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -112,7 +112,10 @@
               <p class="border rounded">ログアウト</p>
             <% end %>
 
+            </div>
 
+            <form class="form-inline my-2 my-lg-0">
+              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
 
 
       <% elsif %>
