--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -20,7 +20,7 @@
 <div class="container text-center">
     <div class="row">
 
-  <div><%= link_to "カートを空にする", public_destroy_all_cart_items_path, method: :delete, class: "btn btn-danger btn-sm" %></div>
+  <div><%= link_to "カートを空にする", public_destroy_all_cart_items_path, method: :delete, class: "btn btn-success" %></div>
   </div>
 </div>
 
