--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,2 +1,38 @@
-<h1>Public::Orders#index</h1>
-<p>Find me in app/views/public/orders/index.html.erb</p>
+<p id="notice"></p>
+  <div class="container">
+    <div class="row">
+      <div class="p-3 mb-2 bg-secondary text-light">注文履歴一覧</div>
+    </div>
+  </div>
+
+<div class="container">
+    <div class="row">
+      <div class="col">
+      <table border="1" style="border-collapse: collapse">
+        <thead>
+          <tr>
+            <th>注文日</th>
+            <th>配送先</th>
+            <th>注文商品</th>
+            <th>支払金額</th>
+            <th>ステータス</th>
+            <th>注文詳細</th>
+          <th colspan="3"></th>
+          </tr>
+        </thead>
+
+         <tbody>
+    <% @orders.each do |order| %>
+      <tr>
+        <td><%= order.created_at %></td>
+        <td><%= order.adderss %></td>
+        <td><%= order.item.name %></td>
+        <td><%= order.item.price %>円</td>
+        <td></td>
+        <td><%= link_to "表示する", public_order_path(@order.id), class: "btn btn-danger btn-sm" %></div>
+      </tr>
+    <% end %>
+  </tbody>
+
+
+  </table>
