--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -18,6 +18,7 @@
           <th colspan="3"></th>
           </tr>
         </thead>
+      <% total = 0 %>
 
   <tbody>
     <% @cart_items.each do |cart_item| %>
@@ -26,26 +27,29 @@
         <td><%= cart_item.item.with_tax_price %>円</td>
         <td><%= cart_item.amount %></td>
         <td><%= cart_item.subtotal %>円</td>
+        <% total += cart_item.subtotal %>
       </tr>
-    <% end %>
+<% end %>
   </tbody>
   </div>
 
 
-<%= form_with model: @order, url: public_orders_complete_path do |f| %>
+
 
     <table border="1" style="border-collapse: collapse">
       <tr>
         <th bgcolor = "lavender">送料</th>
-        <td><%= @order.shipping_cost %></td>
+        <td><%= @order.shipping_cost %>円</td>
       </tr>
+
       <tr>
         <th bgcolor = "lavender">商品合計</th>
-        <td></td>
+          <td><%= total %>円</td>
       </tr>
+
       <tr>
         <th bgcolor = "lavender">請求金額</th>
-      <td><%= @order.total_payment %></td>
+      <td><%= @order.shipping_cost + total %>円</td>
       </tr>
 
     </table>
@@ -67,10 +71,19 @@
         <%= @order.name %>
     </div>
 </div>
-<%= f.hidden_field :order_id, :value => @order.id %>
+
 
 <div class="container">
     <div class="row">
+      <%= form_with model: @order, url: public_orders_complete_path do |f| %>
+
+        <%= f.hidden_field :postal_code, :value => @order.postal_code %>
+        <%= f.hidden_field :address, :value => @order.address %>
+        <%= f.hidden_field :name, :value => @order.name %>
+        <%= f.hidden_field :payment_method_i18n, :value => @order.payment_method_i18n %>
+        <%= f.hidden_field :shipping_cost, :value => @order.shipping_cost %>
+
+
       <%= f.submit "注文を確定する", class: "btn btn-success" %>
     </div>
 </div>
