--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -91,7 +91,7 @@
         <strong>注文履歴</strong>
       </div>
       <div class="col-2">
-        <%= link_to "一覧を見る", public_order_path(@customer), class: "btn btn-sm btn-primary" %>
+        <%= link_to "一覧を見る", public_orders_path(@customer), class: "btn btn-sm btn-primary" %>
       </div>
     </div>
   </div>
