--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -5,3 +5,111 @@
     </div>
   </div>
 
+<div class="container">
+    <div class="row">
+      <div class="col-6">
+
+  <%= form_with model: @order, url: edit_public_customer_path do |f| %>
+  <table border="1" style="border-collapse: collapse">
+    <strong>注文情報</strong>
+    <tr>
+      <th bgcolor = "lavender">注文日</th>
+      <td>
+
+      </td>
+    </tr>
+
+  <tr>
+    <th bgcolor = "lightsteelblue">配送先</th>
+      <td>
+
+      </td>
+  </tr>
+
+  <tr>
+    <th bgcolor = "lightsteelblue">支払方法</th>
+      <td>
+
+      </td>
+  </tr>
+
+  <tr>
+    <th bgcolor = "lightsteelblue">ステータス</th>
+      <td>
+
+      </td>
+  </tr>
+  </table>
+</div>
+
+<div class="col-6">
+      <table border="1" style="border-collapse: collapse">
+  <strong>請求情報</strong>
+  <tr>
+    <th bgcolor = "lightsteelblue">商品合計</th>
+      <td>
+
+      </td>
+  </tr>
+
+  <tr>
+    <th bgcolor = "lightsteelblue">配送料</th>
+      <td>
+
+      </td>
+  </tr>
+
+  <tr>
+    <th bgcolor = "lightsteelblue">ご請求額</th>
+      <td>
+
+      </td>
+  </tr>
+
+  <% end %>
+  </table>
+
+  </div>
+  </div>
+  </div>
+
+
+  <div class="container">
+    <div class="row">
+      <div class="col mt-5">
+      <table border="1" style="border-collapse: collapse">
+         <strong>注文内容</strong>
+        <thead>
+          <tr>
+            <th>商品</th>
+            <th>単価　税込み</th>
+            <th>個数</th>
+            <th>小計</th>
+          <th colspan="3"></th>
+          </tr>
+        </thead>
+        <% total = 0 %>
+
+        <tbody>
+    <% @cart_items.each do |cart_item| %>
+      <tr>
+        <td><%= cart_item.item.name %></td>
+        <td><%= cart_item.item.with_tax_price %>円</td>
+        <td><%= cart_item.amount %></td>
+        <td><%= cart_item.subtotal %>円</td>
+        <% total += cart_item.subtotal %>
+      </tr>
+<% end %>
+</table>
+</div>
+</div>
+</div>
+
+</tbody>
+
+
+
+
+
+
+
