--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -27,14 +27,17 @@
 
   <div><%= f.select :amount, *[1..10] %></div>
 
-<%= f.hidden_field :item_id, :value => @item.id %>
+    <%= f.hidden_field :item_id, :value => @item.id %>
 
-
-<div><%= f.submit "カートに入れる", class: "btn btn-success" %></div>
-
-</div>
+<div class="containerer">
+    <div class="row mt-5">
+        <%= f.submit "カートに入れる", class: "btn btn-success" %>
     </div>
   </div>
+
+      </div>
+    </div>
+</div>
 
 
 <% end %>
