--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -31,7 +31,7 @@
         <td><%= order.item.name %></td>
         <td><%= order.item.price %>円</td>
         <td><%= order.status_i18n %></td>
-        <td><%= link_to "表示する", public_order_path(@order.id), class: "btn btn-danger btn-sm" %></div>
+        <td><%= link_to "表示する", public_order_path(order.id), class: "btn btn-danger btn-sm" %></div>
       </tr>
     <% end %>
   </tbody>
