--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -2,6 +2,7 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12 mx-auto">
+            <%= image_tag "baked-goods-1853261_1280.jpg", size: '550x350' %>
             <div class="text-center"
             <p>
                 <span>ようこそ、ながのCAKEへ!</span><br>
@@ -10,6 +11,7 @@
                 購入には会員登録が必要になります。</br>
             </p>
             </div>
+
         </div>
     </div>
 </div>
