--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -2,72 +2,80 @@
   <div class="container text-center">
     <div class="row">
       <div class="p-3 mb-2 bg-secondary text-light">会員情報編集</div>
-　　</div>
-
-
+    </div>
+  </div>
 
 
     <%= form_with model: @customer, url: admin_customer_path do |f| %>
 
-    <div class="form-group">
-        会員ID
-        <%= @customer.id %>
+    <div class="container">
+
+      <div class="row mb-3">
+        <div class="col-2">会員ID</div>
+        <div class="col-2"><%= @customer.id %></div>
       </div>
 
 
-    <div class="form-group">
-        氏名
-      <%= f.text_field :last_name, placeholder: "姓" %>
-      <%= f.text_field :first_name, placeholder: "名" %>
+
+    <div class="row mb-3">
+      <div class="col-2">氏名</div>
+      <div class="col-3"><%= f.text_field :last_name, placeholder: "姓" %></div>
+      <div class="col-3"><%= f.text_field :first_name, placeholder: "名" %></div>
     </div>
 
 
-    <div class="form-group">
-        フリガナ
-      <%= f.text_field :last_name_kana, placeholder: "姓カナ" %>
-      <%= f.text_field :first_name_kana, placeholder: "名カナ" %>
+
+    <div class="row mb-3">
+      <div class="col-2">フリガナ</div>
+      <div class="col-3"><%= f.text_field :last_name_kana, placeholder: "姓カナ" %></div>
+      <div class="col-3"><%= f.text_field :first_name_kana, placeholder: "名カナ" %></div>
     </div>
 
 
-    <div class="form-group">
-       郵便番号
-      <%= f.text_field :postal_code %>
+
+    <div class="row mb-3">
+      <div class="col-2">郵便番号</div>
+      <div class="col-2"><%= f.text_field :postal_code %></div>
     </div>
 
 
-    <div class="form-group">
-        住所
-      <%= f.text_field :address %>
+
+    <div class="row mb-3">
+      <div class="col-2">住所</div>
+      <div class="col-2"><%= f.text_field :address %></div>
     </div>
 
-     <div class="form-group">
-        電話番号
-      <%= f.text_field :telephone_number %>
-   </div>
+
+    <div class="row mb-3">
+      <div class="col-2">電話番号</div>
+      <div class="col-2"><%= f.text_field :telephone_number %></div>
+    </div>
 
 
-    <div class="form-group">
-        メールアドレス
-      <%= f.text_field :email %>
-   </div>
+    <div class="row mb-3">
+      <div class="col-2">メールアドレス</div>
+      <div class="col-2"><%= f.text_field :email %></div>
+    </div>
 
-    <div class="form-group">
-       会員ステータス
 
-       <%= f.radio_button :is_deleted, :false %>
+    <div class="row mb-3">
+      <div class="col-2">会員ステータス</div>
+      <div class="col-2"><%= f.radio_button :is_deleted, :false %>
          <%= f.label :is_deleted, "有効" %>
-
-       <%= f.radio_button :is_deleted, :true %>
+      </div>
+      <div class="col-2"><%= f.radio_button :is_deleted, :true %>
          <%= f.label :is_deleted, "退会" %>
+      </div>
+    </div>
 
 
+      <div class="row text-center">
+        <div class="col">
+           <%= f.submit "変更を保存", class: "btn btn-success" %>
+        </div>
       </div>
 
-       <div><%= f.submit "変更を保存", class: "btn btn-success" %></div>
 
+  </div>
 
-
-
-
-
-　　<% end %>
+  <% end %>
