--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,21 +1,16 @@
 <%= form_with model: @customer, url: admin_customer_path do |f| %>
 
 <p id="notice"></p>
-  <div class="container text-center">
+  <div class="container">
     <div class="row">
       <div class="p-3 mb-2 bg-secondary text-light">
         <%= @customer.last_name %>
         <%= @customer.first_name %>さん
         会員詳細</div>
-
-
     </div>
+  </div>
 
-
-
-
-
-  <div class="container text-center">
+  <div class="container">
     <div class="row mt-3">
       <div class="col-2">
         会員ID
@@ -112,14 +107,15 @@
 
 
 
-    <div class="row mt-2">
+    <div class="row">
       <div class="col-2">
-      <div><%= link_to "編集する", edit_admin_customer_path(@customer.id), class: "btn btn-sm btn-success" %></div>
+      <%= link_to "編集する", edit_admin_customer_path(@customer.id), class: "btn btn-sm btn-success" %>
       </div>
-      <div><%= link_to "注文履歴一覧を見る", admin_top_path(@customer.id), class: "btn btn-sm btn-primary" %></div>
+      <div class="col">
+      <%= link_to "注文履歴一覧を見る", admin_top_path(@customer.id), class: "btn btn-sm btn-primary" %>
     </div>
   </div>
- </div>
+
 
 
   <% end %>
