--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -82,13 +82,15 @@
 <div class="container">
     <div class="row mt-5 text_center">
 
-      <%= form_with model: @order, url: public_orders_complete_path do |f| %>
+      <%= form_with model: @order, url: public_orders_path do |f| %>
 
         <%= f.hidden_field :postal_code, :value => @order.postal_code %>
         <%= f.hidden_field :address, :value => @order.address %>
         <%= f.hidden_field :name, :value => @order.name %>
         <%= f.hidden_field :payment_method_i18n, :value => @order.payment_method_i18n %>
-        <%= f.hidden_field :shipping_cost, :value => @order.shipping_cost %>
+        <%= f.hidden_field :shipping_cost, :value => 800 %>
+        <%= f.hidden_field :total_payment, :value => total %>
+        <%= f.hidden_field :customer_id, :value => current_customer.id %>
 
 
       <%= f.submit "注文を確定する", class: "btn btn-success" %>
