--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -22,7 +22,7 @@
  <tbody>
     <% @orders.each do |order| %>
     <tr>
-      <td><%= link_to order.created_at.strftime('%Y年%m月%d日'), admin_order_path %></td>
+      <td><%= link_to order.created_at.strftime('%Y年%m月%d日%H:%M:%S'), admin_order_path(order.id) %></td>
       <td><%= order.customer.full_name %></td>
       <td></td>
       <td><%= order.status_i18n %></td>
