--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -112,7 +112,7 @@
       <%= link_to "編集する", edit_admin_customer_path(@customer.id), class: "btn btn-sm btn-success" %>
       </div>
       <div class="col">
-      <%= link_to "注文履歴一覧を見る", admin_top_path(@customer.id), class: "btn btn-sm btn-primary" %>
+      <%= link_to "注文履歴一覧を見る", admin_top_path, class: "btn btn-sm btn-primary" %>
     </div>
   </div>
 
