--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -13,7 +13,7 @@
         購入者
       </div>
       <div class="col-2">
-        <%=  @order.customer_id %>
+        <%=  @order.name %>
       </div>
     </div>
   </div>
@@ -59,7 +59,10 @@
         注文ステータス
       </div>
       <div class="col-2">
-        <%= @order.status_i18n %>
+        <%= f.select :status, Order.statuses_i18n.invert %>
+      </div>
+      <div class="col-2">
+      <%= f.submit "更新", class: "btn btn-success" %>
       </div>
     </div>
   </div>
@@ -84,18 +87,27 @@
     </thead>
 
     <tbody>
+
     <% @order_details.each do |order_detail| %>
+
+    <%= form_with model: order_detail , url: admin_order_path(order_detail.id) do |f| %>
+
     <tr>
-      <td><%= order_detail.item_id %></td>
-      <td><%= order_detail.price %></td>
+      <td><%= order_detail.item.name %></td>
+      <td><%= order_detail.item.with_tax_price %></td>
       <td><%= order_detail.amount %></td>
-      <td></td>
-      <td><%= order_detail.making_method_i18n %></td>
+      <td><%= order_detail.item.with_tax_price * order_detail.amount %></td>
+      <td><%= f.select :making_method, OrderDetail.making_methods_i18n.invert %>
+      <%= f.submit "更新", class: "btn btn-success" %>
+      </td>
     </tr>
+
+    <% end %>
+
     <% end %>
     </tbody>
+</table>
 
-  </table>
 </div>
 
 
