[Add]商品一覧編集

--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -16,8 +16,8 @@
 
 <div class="col-8">
   <div class="container">
-    <div class="row mt-3">
-      <div class="col-2">
+    <div class="row mt-2">
+      <div class="col-3">
         商品名
       </div>
       <div class="col-4">
@@ -28,7 +28,7 @@
 
   <div class="container">
     <div class="row mt-2">
-      <div class="col-2">
+      <div class="col-3">
         商品説明
       </div>
       <div class="col-4">
@@ -40,7 +40,7 @@
 
   <div class="container">
     <div class="row mt-2">
-      <div class="col-2">
+      <div class="col-3">
         ジャンル
       </div>
       <div class="col-4">
@@ -51,7 +51,7 @@
 
   <div class="container">
     <div class="row mt-2">
-      <div class="col-2">
+      <div class="col-3">
         税抜価格
       </div>
       <div class="col-4">
@@ -77,8 +77,8 @@
   </div>
 
 
-  <div class="container">
-    <div class="row mt-2 text-center">
+  <div class="container ">
+    <div class="row mt-2 ml-5">
       <div class="col-2">
       <div><%= link_to "編集する", edit_admin_item_path(@item.id), class: "btn btn-sm btn-success" %></div>
       </div>
