--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -8,25 +8,22 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "public/shared/error_messages", resource: resource %>
 
- <div class="container text-center">
-    <div class="row mb-3">
-      <div class="col-md">
+ <div class="container">
 
-  <%= f.label :名前 %>
-  (姓)<%= f.text_field :last_name %>
-  (名)<%= f.text_field :first_name %>
+    <div class="row mb-3">
+      <div class="col-2"><%= f.label :名前 %></div>
+      <div class="col-mr-2"><%= f.text_field :last_name %></div>
+      <div class="col-4"><%= f.text_field :first_name %></div>
     </div>
-  </div>
 
   <div class="row mb-3">
-    <div class="col-md">
-      <%= f.label :フリガナ %>
-      <%= f.text_field :last_name_kana %>
-      <%= f.text_field :first_name_kana %>
+    <div class="col-2"><%= f.label :フリガナ %></div>
+      <div class="col-mr-2"><%= f.text_field :last_name_kana %></div>
+      <div class="col-3"><%= f.text_field :first_name_kana %></div>
     </div>
-  </div>
 
-<div class="field">
+
+<div class="row mb-3">
     <%= f.label :メールアドレス %>
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
