[Add]注文詳細一覧個数

--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -21,11 +21,16 @@
 
  <tbody>
     <% @orders.each do |order| %>
+    <% total = 0 %>
     <tr>
       <td><%= link_to order.created_at.strftime('%Y年%m月%d %H:%M:%S'), admin_order_path(order.id) %></td>
       <td><%= order.customer.full_name %></td>
-      <td></td>
+      <% order.order_details.each do |order_detail| %>
+      <% total += order_detail.amount %>
+      <% end %>
+      <td><%= total %></td>
       <td><%= order.status_i18n %></td>
+
     </tr>
     <% end %>
   </tbody>
