--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"></p>
-  <div class="container text-center">
+  <div class="container">
     <div class="row">
       <div class="p-3 mb-2 bg-secondary text-light">注文履歴詳細</div>
     </div>
@@ -12,7 +12,7 @@
       <div class="col-2">
         購入者
       </div>
-      <div class="col-2">
+      <div class="col-4">
         <%=  @order.name %>
       </div>
     </div>
@@ -23,20 +23,20 @@
       <div class="col-2">
         注文日
       </div>
-      <div class="col-2">
+      <div class="col-4">
         <%= @order.created_at %>
       </div>
     </div>
   </div>
 
   <div class="container">
-    <div class="row mt-">
+    <div class="row mt-3">
       <div class="col-2">
         配送先
       </div>
-      <div class="col-2">
+      <div class="col-4">
         〒<%= @order.postal_code %>
-        <%= @order.address %>
+        <%= @order.address %><br />
         <%= @order.name %>
       </div>
     </div>
@@ -47,7 +47,7 @@
       <div class="col-2">
         支払方法
       </div>
-      <div class="col-2">
+      <div class="col-4">
         <%= @order.payment_method_i18n %>
       </div>
     </div>
@@ -90,6 +90,7 @@
     <tbody>
 
     <% @order_details.each do |order_detail| %>
+
 
     <%= form_with model: order_detail , url: admin_order_path(order_detail.id) do |f| %>
 
