[Add]商品一覧編集

--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -4,6 +4,7 @@
 
     <div class="row">
       <% @items.each do |item| %>
+     
 
       <% if item.is_active %>
             <div class="col">
@@ -27,4 +28,4 @@
     </div>
 </div>
 
-
+ <%= paginate @genres %>
