--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -35,7 +35,7 @@
 
 			        </td>
 
-            <td><%= order.total_payment %></td>
+            <td>¥<%= order.total_payment %></td>
 
         <td><%= order.status_i18n %></td>
         <td><%= link_to "表示する", public_order_path(order.id), class: "btn btn-primary btn-sm" %></div>
