--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -83,9 +83,9 @@
   <% @order_details.each do |order_detail| %>
   <tr>
     <td><%= order_detail.item.name %></td>
-    <td><%= order_detail.item.with_tax_price %></td>
+    <td>¥<%= order_detail.item.with_tax_price %></td>
     <td><%= order_detail.amount %></td>
-    <td><%= order_detail.item.with_tax_price * order_detail.amount %></td>
+    <td>¥<%= order_detail.item.with_tax_price * order_detail.amount %></td>
   </tr>
   <% end %>
 
