--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -11,59 +11,60 @@
  <div class="container">
 
     <div class="row mb-3">
-      <div class="col-2"><%= f.label :名前 %></div>
+      <div class="col-3"><%= f.label :名前 %></div>
       <div class="col-mr-2"><%= f.text_field :last_name %></div>
       <div class="col-4"><%= f.text_field :first_name %></div>
     </div>
 
   <div class="row mb-3">
-    <div class="col-2"><%= f.label :フリガナ %></div>
+    <div class="col-3"><%= f.label :フリガナ %></div>
       <div class="col-mr-2"><%= f.text_field :last_name_kana %></div>
       <div class="col-3"><%= f.text_field :first_name_kana %></div>
     </div>
 
 
 <div class="row mb-3">
-    <%= f.label :メールアドレス %>
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <div class="col-3"><%= f.label :メールアドレス %></div>
+    <div class="col-mr-2"><%= f.email_field :email, autofocus: true, autocomplete: "email" %></div>
   </div>
 
-<div class="field">
-  <%= f.label :郵便番号 %>
-  <%= f.text_field :postal_code %>
+<div class="row mb-3">
+  <div class="col-3"><%= f.label :郵便番号 %></div>
+  <div class="col-mr-2"><%= f.text_field :postal_code %></div>
 </div>
 
-<div class="field">
-  <%= f.label :住所 %>
-  <%= f.text_field :address %>
+<div class="row mb-3">
+  <div class="col-3"><%= f.label :住所 %></div>
+  <div class="col-mr-2"><%= f.text_field :address %></div>
 </div>
 
-<div class="field">
-  <%= f.label :電話番号 %>
-  <%= f.text_field :telephone_number %>
+<div class="row mb-3">
+  <div class="col-3"><%= f.label :電話番号 %></div>
+  <div class="col-mr-2"><%= f.text_field :telephone_number %></div>
 </div>
 
 
-  <div class="container text-center">
     <div class="row mb-3">
-      <div class="col-md">
-    <%= f.label :パスワード %>
+      <div class="col-3"><%= f.label :パスワード %>
     <% if @minimum_password_length %>
     (<%= @minimum_password_length %> 文字以上)
     <% end %>
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+    </div>
+
+    <div class="row mb-3">
+    <div class="col-3"><%= f.password_field :password, autocomplete: "new-password" %></div>
   </div>
   </div>
 
-  <div class="container text-center">
+
     <div class="row mb-3">
-      <div class="col-md">
-    <%= f.label :パスワード %> (確認用)
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+      <div class="col-3"><%= f.label :パスワード %> (確認用) </div>
+    <div class="col-mr-2"><%= f.password_field :password_confirmation, autocomplete: "new-password" %></div>
   </div>
-  </div>
-  </div>
+
+
+</div>
+
 
 
 <div class="container text-center">
