--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -3,6 +3,8 @@
     <div class="row">
       <div class="p-3 mb-2 bg-secondary text-light">ショッピングカート</div>
     </div>
+    
+    <% if @cart_items.any? %>
 
 
   <table border="1" style="border-collapse: collapse">
