--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -59,7 +59,7 @@
 
     <div class="row mb-3">
       <div class="col-3"><%= f.label :パスワード %> (確認用) </div>
-    <div class="col-mr-2"><%= f.password_field :password_confirmation, autocomplete: "new-password" %></div>
+    <div class="col-3"><%= f.password_field :password_confirmation, autocomplete: "new-password" %></div>
   </div>
 
 
